<?xml version="1.0"?>
<package>
  <name>cv_sens</name>
  <version>0.0.1</version>
  <description>Fuses data of vision/sonar/imu to provide metric state feedback</description>

  <maintainer email="atulyashivamshree@gmail.com">atulya</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/cv_sens</url> -->

  <author email="atulyashivamshree@gmail.com">Atulya Shivam Shree</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>px_comm</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>mavros</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>vikit_common</build_depend>
  <build_depend>aruco</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>px_comm</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>mavros</run_depend>
  <run_depend>mavros_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>vikit_common</run_depend>
  <run_depend>aruco</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <mavros plugin="${prefix}/mavros_debug_plugins.xml"/>
  </export>
</package>
